# csrs

./: .database  .gitignore  404.html  Dockerfile  MANIFEST.in  README.md  build_all.bat  csrs_schema_structure.toml  dbdiagram.txt  dbdiagram_dss_based.txt  environment.yaml  example.py  index.html  mkdocs.yml  objects.inv  pp_script.py  prod_environment.yaml  pyproject.toml  run_app.bat  run_app_for_tests.bat  run_server.sh  setup_run_server.sh  sitemap.xml
.github/workflows/: conda-build.yml
api/: index.html
calsim_scenario_server/: __init__.py  __main__.py  app_metadata.json  clients.py  clients.pyi  crud.py  database.py  enum.py  enums.py  errors.py  logger.py  main.py  metadata.py  models.py  schemas.py  util.py
calsim_scenario_server/crud/: __init__.py  assumptions.py  paths.py  runs.py  scenarios.py  timeseries.py  timesteps.py
calsim_scenario_server/database/: __init__.py  dss.py  standard_paths.json
calsim_scenario_server/models/frontend/: __init__.py  (+4 more)
calsim_scenario_server/routers/: __init__.py  excel.py  python.py
calsim_scenario_server/routes/: __init__.py  assumptions.py  forms.py  paths.py  runs.py  scenarios.py  timeseries.py
calsim_scenario_server/templates/: project.html  project_land_use.html  project_sea_level_rise.html  scenario.html
conda-recipe/: meta.yaml
csrs/: __init__.py  main.py  schemas.py
csrs/crud/: decorators.py  paths.py
csrs/routes/: forms.py
database/: distributed_repo.toml  names.json
database/DCR2023_9.0.0_Danube_Adjusted/: metadata.json
database/DCR2023_9.0.0_Danube_Historical/: metadata.json
database/_empty/: metadata.json
docs/: api.md  index.md  tutorials.md
scripts/: add_to_db.py  dcr_bootstrap.py  dcr_bootstrap.toml  dcr_bootstrap_test.py
scripts/dcr/: assumptions.toml  runs.toml  scenarios.toml  timeseries.toml
scripts/toml/: fv_csv_to_toml.py  fv_toml_to_csv.py
src/calsim_scenario_server/: __init__.py  __main__.py  client.py  crud.py  database.py  logger.py  models.py  schemas.py
src/csrs/: __init__.py  __main__.py  clients.py  config.py  database.py  enums.py  errors.py  logger.py  main.py  models.py  schemas.py
tests/: conftest.py  test_assumptions.py  test_client.py  test_client_api.py  test_client_use.py  test_crud.py  test_crud_rollback.py  test_import.py  test_models.py  test_schemas.py  test_standard_paths.py  test_str_repr.py
tests/assets/: create_testing_assets.py
tests/test_models/: scenarios.py  test_assumptions.py  test_metric_values.py  test_metrics.py  test_paths.py  test_run_metadata.py  test_runs.py  test_scenario_assumptions.py  test_scenarios.py  test_time_series_values.py  test_time_steps.py  test_units.py
tutorials/: index.html
(+212 files in other folders)
