[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "csrs"
authors = [
    {name = "Zachary Roy", email = "zachary.roy@water.ca.gov" }
]
description = "A FastAPI server for CalSim model results and metadata"
readme = "README.md"
license = {text = "MIT"}
version = "0.2.0"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi",
    "packaging",
    "uvicorn",
    "gunicorn",
    "sqlalchemy",
    "jinja2",
    "python-multipart",
    "pandss"
]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib", 
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
pythonpath = "."
