[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "csrs"
authors = [
    {name = "Zachary Roy", email = "zachary.roy@water.ca.gov" }
]
description = "A FastAPI server for CalSim model results and metadata"
readme = "README.md"
license = {text = "MIT"}
version = "0.6.6"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi",
    "packaging",
    "uvicorn",
    "sqlalchemy",
    "jinja2",
    "python-multipart",
    "pandss>=0.7.10",
    "httpx",
    "pydantic-settings"
]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib", 
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
pythonpath = "./src"
filterwarnings = [
    "error"
]
log_file="tests.log"
log_format = "%(levelname)7s %(asctime)s %(funcName)s %(message)s"